--- a/presentation.html
+++ b/presentation.html
@@ -19,9 +19,9 @@
     <div id="tsparticles"></div>
     
     <!-- Navigation -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar navbar-expand-lg sticky-top navbar-light bg-light">
       <div class="container-fluid">
-        <a class="navbar-brand text-primary" href="index.html">Perez Pl</a>
+        <a class="navbar-brand btn btn-light text-primary" href="index.html#top">Perez Pl</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -37,7 +37,7 @@
         <div class="collapse navbar-collapse" id="navbarColor03">
           <ul class="navbar-nav ms-auto text-center">
             <li class="nav-item">
-              <a class="nav-link" href="index.html"> Accueil </a>
+              <a class="nav-link" href="index.html">Accueil</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="projets.html">Projets</a>
