add begining of presentation

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
 
     <!-- Header -->
-    <header class="container text-center border border-light rounded mb-5">
+    <header class="container-fluid text-center border border-light mb-5">
         <figure class="text-intro">
             <blockquote class="blockquote">
                 <h1 class="mb-2 text-primary">Portfolio de Pierre-Loup Perez</h1>
@@ -140,6 +140,10 @@
 
 
     </main>
+    
+    <footer class="container-fluid text-center border border-light mt-5">
+      <p>en construction</p>
+    </footer>
 
     <script
       src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
