--- a/projets.html
+++ b/projets.html
@@ -56,21 +56,26 @@
       </div>
     </nav>
     
+    <!-- Header -->
+    <header class="container-fluid text-center border border-light mb-5">
+       <figure class="text-intro">
+         <blockquote class="blockquote">
+           <h1 class="mb-2 text-primary">Projets Web</h1>
+         </blockquote>
+         <figcaption class="blockquote-footer text-dark">
+           par <cite title="Source Title">Pierre-Loup Perez</cite>
+         </figcaption>
+       </figure>
+     </header>
 
     <!-- Main -->
     <main class="container">
-     <!-- Header -->
-     <header class="text-center border border-light">
-        <figure class="text-intro">
-          <blockquote class="blockquote">
-            <h1 class="mb-2 text-primary">Projets Web</h1>
-          </blockquote>
-          <figcaption class="blockquote-footer text-dark">
-            par <cite title="Source Title">Pierre-Loup Perez</cite>
-          </figcaption>
-        </figure>
-      </header>
+      <p>en construction</p>
     </main>
+
+    <footer class="container-fluid text-center border border-light mt-5">
+
+    </footer>
 
     <script
       src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
