--- a/cv.html
+++ b/cv.html
@@ -56,20 +56,25 @@
       </div>
     </nav>
 
+    <!-- Header -->
+    <header class="container-fluid text-center border border-light mb-5">
+       <figure class="text-intro">
+         <blockquote class="blockquote">
+           <h1 class="mb-2 text-primary">Curriculum Vitae</h1>
+         </blockquote>
+         <figcaption class="blockquote-footer text-dark">
+           de <cite title="Source Title">Pierre-Loup Perez</cite>
+         </figcaption>
+       </figure>
+     </header>
 
     <main class="container">
-     <!-- Header -->
-     <header class="text-center border border-light">
-        <figure class="text-intro">
-          <blockquote class="blockquote">
-            <h1 class="mb-2 text-primary">Curriculum Vitae</h1>
-          </blockquote>
-          <figcaption class="blockquote-footer text-dark">
-            de <cite title="Source Title">Pierre-Loup Perez</cite>
-          </figcaption>
-        </figure>
-      </header>
+      <p>en construction</p>
     </main>
+
+    <footer class="container-fluid text-center border border-light mt-5">
+
+    </footer>
 
 
     <script
