add blue bg on titles

--- a/cv.html
+++ b/cv.html
@@ -57,10 +57,10 @@
     </nav>
 
     <!-- Header -->
-    <header class="container-fluid text-center border border-light mb-5">
+    <header class="container-fluid text-center mb-5">
        <figure class="text-intro">
          <blockquote class="blockquote">
-           <h1 class="mb-2 text-primary">Curriculum Vitae</h1>
+           <h1 class="mb-2 display-4">Curriculum Vitae</h1>
          </blockquote>
          <figcaption class="blockquote-footer text-dark">
            de <cite title="Source Title">Pierre-Loup Perez</cite>
@@ -70,9 +70,9 @@
 
     <main class="container text-center ">
       <!-- titre du CV -->
-      <div class="row align-items-center justify-content-center">
-        <h2 class="col-12 col-sm-6 col-md-8 mb-2">Développeur Web Junior</h2>
-        <img class="photoProfil col-12 col-sm-6 col-md-4 mb-2" src="/assets/PhotoCV1reduit.jpg" alt="photo pierre-loup">
+      <div class="row align-items-center justify-content-center titreCv">
+        <h2 class="col-12 col-sm-6 col-md-8 my-2">Développeur Web Junior</h2>
+        <img class="photoProfil col-12 col-sm-6 col-md-4 my-2" src="/assets/PhotoCV1reduit.jpg" alt="photo pierre-loup">
       </div>
 
       <hr>
@@ -85,7 +85,7 @@
 
           <!-- Competences -->
           <article>
-            <h3 class="mb-3">Competences</h3>
+            <h3 class="mb-3 titreCv">Competences</h3>
             <section class="row align-items-center">
               <h4 class="col-12 col-lg-2">WebDev</h4>
               <p class="col-12 col-lg-3">
@@ -125,7 +125,7 @@
           <hr>
           <!-- Expériences -->
           <article>
-            <h3>Experiences</h3>
+            <h3 class="titreCv">Experiences</h3>
             <section class="row align-items-center">
               <h4 class="col-12 col-lg-3">2011-2021</h4>
               <div class="col-12 col-lg-9">
@@ -153,7 +153,7 @@
         </div>
         <!-- Colonne de droite -->
         <aside class="col-12 col-md-4">
-          <h3>Formations</h3>
+          <h3 class="titreCv">Formations</h3>
           <section>
             <h4>2021-2022</h4>
             <p>Développeur Web et Web Mobile au GRETA Lyon-Métropole</p>
@@ -181,8 +181,8 @@
       <hr>
       <!-- Pied du CV - Intérets -->
       <article class="col-12 row align-items-center">
-        <h3 class="col-12 col-md-3">Interets</h3>
-        <ul class="col-12 col-md-9 text-start">
+        <h3 class="col-12 col-md-4 titreCv">Interets</h3>
+        <ul class="col-12 col-md-8 text-start">
           <li>Informatique : intérêt personnel pour la Cybersécurité</li>
           <li>Sport : golf, football, running</li>
           <li>Musique : composition musicale, pratique du cor et de la trompette</li>
