--- a/presentation.html
+++ b/presentation.html
@@ -57,10 +57,10 @@
     </nav>
     
     <!-- Header -->
-    <header class="container-fluid text-center border border-light mb-5">
+    <header class="container-fluid text-center mb-5">
        <figure class="text-intro">
          <blockquote class="blockquote">
-           <h1 class="mb-2 text-primary">Présentation</h1>
+           <h1 class="mb-2 display-4">Présentation</h1>
          </blockquote>
          <figcaption class="blockquote-footer text-dark">
            de <cite title="Source Title">Pierre-Loup Perez</cite>
