--- a/index.html
+++ b/index.html
@@ -58,10 +58,10 @@
 
 
     <!-- Header -->
-    <header class="container-fluid text-center border border-light mb-5">
+    <header class="container-fluid text-center mb-5">
         <figure class="text-intro">
             <blockquote class="blockquote">
-                <h1 class="mb-2 text-primary">Portfolio de Pierre-Loup Perez</h1>
+                <h1 class="mb-2 display-4">Portfolio de Pierre-Loup Perez</h1>
             </blockquote>
             <figcaption class="blockquote-footer text-dark">
                 Développeur <cite title="Source Title">Web et Web Mobile</cite>
@@ -99,7 +99,7 @@
 
       <article class="row my-3 justify-content-around">
         <section class="card border-primary col-12 col-sm-6 col-md-4">
-            <img class="card-img-top" src="/assets/pilou_art.jpg" alt="ecran d'accueil pilou_art">
+            <img class="card-img-top mt-2" src="/assets/pilou_art.jpg" alt="ecran d'accueil pilou_art">
             <div class="card-header border border-light">Galerie d'image</div>
             <div class="card-body">
                 <h4 class="card-title">Galerie d'art de Pilou - Art by Pilou</h4>
@@ -112,7 +112,7 @@
         </section>
 
         <section class="card border-primary col-12 col-sm-6 col-md-4">
-            <img class="card-img-top"  src="/assets/maitressege.jpg" alt="ecran d'accueil maitresse gé">
+            <img class="card-img-top mt-2"  src="/assets/maitressege.jpg" alt="ecran d'accueil maitresse gé">
             <div class="card-header border border-light">Wordpress</div>
             <div class="card-body">
                 <h4 class="card-title">Le blog de Maitresse Gé</h4>
@@ -125,7 +125,7 @@
         </section>
 
         <section class="card border-primary col-12 col-sm-6 col-md-4">
-          <img class="card-img-top"  src="https://via.placeholder.com/300x150/446e9b" alt="ecran d'accueil portfolio">
+          <img class="card-img-top mt-2"  src="https://via.placeholder.com/300x150/446e9b" alt="ecran d'accueil portfolio">
           <div class="card-header border border-light">Portfolio</div>
           <div class="card-body">
               <h4 class="card-title">Portfolio de Pierre-Loup Perez</h4>
