add legal stuff and footer

--- a/cv.html
+++ b/cv.html
@@ -151,6 +151,7 @@
           </article>
   
         </div>
+
         <!-- Colonne de droite -->
         <aside class="col-12 col-md-4">
           <h3 class="titreCv">Formations</h3>
@@ -175,13 +176,15 @@
             <p>Baccalauréat Scientifique (option Sciences de la vie et de la terre)</p>
           </section>
         </aside>
+
       </div>
 
 
       <hr>
+
       <!-- Pied du CV - Intérets -->
-      <article class="col-12 row align-items-center">
-        <h3 class="col-12 col-md-4 titreCv">Interets</h3>
+      <article class="col-12 row align-items-center justify-content-evenly">
+        <h3 class="col-12 col-md-3 titreCv">Interets</h3>
         <ul class="col-12 col-md-8 text-start">
           <li>Informatique : intérêt personnel pour la Cybersécurité</li>
           <li>Sport : golf, football, running</li>
@@ -192,8 +195,19 @@
 
     </main>
 
-    <footer class="container-fluid text-center border border-light mt-5">
-
+    <footer class="container-fluid row text-center justify-content-center mt-5 pt-3">
+      <section class="col-12 col-sm-6 col-md-4 row">
+        <h4>Liens internes</h4>
+        <a href="contact.html">Contactez-moi</a>
+        <a href="mentions.html">Mentions Légales</a>
+        <a href="rgpd.html">RGPD</a>
+      </section>
+      <section class="col-12 col-sm-6 col-md-4 row">
+        <h4>Où me trouver?</h4>
+        <a href="https://github.com/devipilou/devipilou">Github</a>
+        <a href="https://www.linkedin.com/in/pierre-loup-perez">LinkedIn</a>
+        <a href="https://scratch.mit.edu/users/AnnaEtPapa/">Scratch</a>
+      </section>
     </footer>
 
 
