--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 
       <article class="row my-3 justify-content-around">
         <section class="card border-primary col-12 col-sm-6 col-md-4">
-            <img class="card-img-top mt-2" src="/assets/pilou_art.jpg" alt="ecran d'accueil pilou_art">
+            <img class="card-img-top mt-2 border border-light" src="/assets/pilou_art.jpg" alt="ecran d'accueil pilou_art">
             <div class="card-header border border-light">Galerie d'image</div>
             <div class="card-body">
                 <h4 class="card-title">Galerie d'art de Pilou - Art by Pilou</h4>
@@ -112,7 +112,7 @@
         </section>
 
         <section class="card border-primary col-12 col-sm-6 col-md-4">
-            <img class="card-img-top mt-2"  src="/assets/maitressege.jpg" alt="ecran d'accueil maitresse gé">
+            <img class="card-img-top mt-2 border border-light"  src="/assets/maitressege.jpg" alt="ecran d'accueil maitresse gé">
             <div class="card-header border border-light">Wordpress</div>
             <div class="card-body">
                 <h4 class="card-title">Le blog de Maitresse Gé</h4>
@@ -125,7 +125,7 @@
         </section>
 
         <section class="card border-primary col-12 col-sm-6 col-md-4">
-          <img class="card-img-top mt-2"  src="https://via.placeholder.com/300x150/446e9b" alt="ecran d'accueil portfolio">
+          <img class="card-img-top mt-2 border border-light"  src="/assets/portfolio.png" alt="ecran d'accueil portfolio">
           <div class="card-header border border-light">Portfolio</div>
           <div class="card-body">
               <h4 class="card-title">Portfolio de Pierre-Loup Perez</h4>
@@ -141,8 +141,19 @@
 
     </main>
     
-    <footer class="container-fluid text-center border border-light mt-5">
-      <p>en construction</p>
+    <footer class="container-fluid row text-center justify-content-center mt-5 pt-3">
+      <section class="col-12 col-sm-6 col-md-4 row">
+        <h4>Liens internes</h4>
+        <a href="contact.html">Contactez-moi</a>
+        <a href="mentions.html">Mentions Légales</a>
+        <a href="rgpd.html">RGPD</a>
+      </section>
+      <section class="col-12 col-sm-6 col-md-4 row">
+        <h4>Où me trouver?</h4>
+        <a href="https://github.com/devipilou/devipilou">Github</a>
+        <a href="https://www.linkedin.com/in/pierre-loup-perez">LinkedIn</a>
+        <a href="https://scratch.mit.edu/users/AnnaEtPapa/">Scratch</a>
+      </section>
     </footer>
 
     <script
