--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Portofolio de Pierre-Loup Perez</title>
+    <title>Portfolio de Pierre-Loup Perez</title>
     <link
       rel="stylesheet"
       href="https://bootswatch.com/5/spacelab/bootstrap.min.css"
@@ -143,17 +143,25 @@
     
     <footer class="container-fluid row text-center justify-content-center mt-5 pt-3">
       <section class="col-12 col-sm-6 col-md-4 row">
-        <h4>Liens internes</h4>
-        <a href="contact.html">Contactez-moi</a>
-        <a href="mentions.html">Mentions Légales</a>
-        <a href="rgpd.html">RGPD</a>
-      </section>
-      <section class="col-12 col-sm-6 col-md-4 row">
         <h4>Où me trouver?</h4>
         <a href="https://github.com/devipilou/devipilou">Github</a>
         <a href="https://www.linkedin.com/in/pierre-loup-perez">LinkedIn</a>
         <a href="https://scratch.mit.edu/users/AnnaEtPapa/">Scratch</a>
       </section>
+
+      <section class="col-12 col-sm-6 col-md-4 row">
+        <h4>Projets à voir</h4>
+        <a href="/pilou_art/index.html">Gallerie de Pilou_art</a>
+        <a href="https://maitressege.fr">Blog deMaitresse Gé</a>
+      </section>
+
+      <section class="col-12 col-sm-6 col-md-4 row">
+        <h4>Liens internes</h4>
+        <a href="contact.html">Contactez-moi</a>
+        <a href="mentions.html">Mentions Légales</a>
+        <a href="rgpd.html">RGPD</a>
+      </section>
+      <p class="col-12">&copy; <span id="annee"></span> - Pierre-Loup Perez</p>
     </footer>
 
     <script
