small correction and presentation content

--- a/cv.html
+++ b/cv.html
@@ -70,10 +70,11 @@
 
     <main class="container text-center ">
       <!-- titre du CV -->
-      <div class="row align-items-center justify-content-center titreCv">
-        <h2 class="col-12 col-sm-6 col-md-8 my-2">Développeur Web Junior</h2>
-        <img class="photoProfil col-12 col-sm-6 col-md-4 my-2" src="/assets/PhotoCV1reduit.jpg" alt="photo pierre-loup">
+      <div class="row align-items-center justify-content-center titreCv py-5 py-md-4">
+        <h2 class="col-12 col-sm-6 col-md-8">Développeur Web Junior</h2>
+        <img class="photoProfil col-12 col-sm-6 col-md-4" src="/assets/PhotoCV1reduit.jpg" alt="photo pierre-loup">
       </div>
+      <p><span id="age"></span> ans, permisB, véhiculé</p>
 
       <hr>
 
