--- a/index.html
+++ b/index.html
@@ -98,42 +98,52 @@
       <hr class="mx-5 bg-primary">
 
       <article class="row my-3 justify-content-around">
-        <section class="card border-primary col-12 col-sm-6 col-md-4">
+
+        <section class="card bg-primary bg-opacity-10 border-primary col-12 col-sm-6 col-md-4">
             <img class="card-img-top mt-2 border border-light" src="/assets/pilou_art.jpg" alt="ecran d'accueil pilou_art">
-            <div class="card-header border border-light">Galerie d'image</div>
+            <div class="card-header bg-primary bg-opacity-25 border border-light">Galerie d'image</div>
             <div class="card-body">
                 <h4 class="card-title">Galerie d'art de Pilou - Art by Pilou</h4>
                 <div class="card-text">
-                    <a href="/pilou_art">Galerie d'art de Pilou - Art by Pilou</a>
                     <p>Projet "from scratch" Html/Scss/Javascript</p>
                     <p><small>galerie d'image pour <a href="https://www.instagram.com/pilou_art/" target="_blank">@pilou_art</a></small></p>
                 </div>
             </div>
+            <div class="card-footer border border-light rounded bg-primary bg-opacity-25 ">
+              <a href="/pilou_art" class="btn btn-primary">Visitez le site</a>
+              <a href="/projets.html#" class="btn btn-light">Descriptif</a>
+            </div>
         </section>
 
-        <section class="card border-primary col-12 col-sm-6 col-md-4">
+        <section class="card bg-primary bg-opacity-10 border-primary col-12 col-sm-6 col-md-4">
             <img class="card-img-top mt-2 border border-light"  src="/assets/maitressege.jpg" alt="ecran d'accueil maitresse gé">
-            <div class="card-header border border-light">Wordpress</div>
+            <div class="card-header bg-primary bg-opacity-25  border border-light">Wordpress</div>
             <div class="card-body">
                 <h4 class="card-title">Le blog de Maitresse Gé</h4>
                 <div class="card-text">
-                    <a href="https://maitressege.fr">Le blog de Maitresse Gé</a>
                     <p>Projet "Wordpress" thème OceanWP-Elementor</p>
                     <p><small>blog de l'instagrameuse <a href="https://www.instagram.com/maitresse.ge/" target="_blank">@maitresse.ge</a></small></p>
                 </div>
             </div>
+            <div class="card-footer border border-light rounded bg-primary bg-opacity-25 ">
+              <a href="https://maitressege.fr" class="btn btn-primary">Visitez le site</a>
+              <a href="/projets.html#" class="btn btn-light">Descriptif</a>
+            </div>
         </section>
 
-        <section class="card border-primary col-12 col-sm-6 col-md-4">
+        <section class="card bg-primary bg-opacity-10 border-primary col-12 col-sm-6 col-md-4">
           <img class="card-img-top mt-2 border border-light"  src="/assets/portfolio.png" alt="ecran d'accueil portfolio">
-          <div class="card-header border border-light">Portfolio</div>
+          <div class="card-header bg-primary bg-opacity-25 border border-light">Portfolio</div>
           <div class="card-body">
               <h4 class="card-title">Portfolio de Pierre-Loup Perez</h4>
               <div class="card-text">
-                  <a href="https://perezpl.fr">Portfolio</a>
                   <p>Projet "Bootstrap" de portfolio</p>
                   <p><small>présentation de mes projets terminés</small></p>
               </div>
+          </div>
+          <div class="card-footer border border-light rounded bg-primary bg-opacity-25">
+            <a href="/index.html" class="btn btn-primary">Visitez le site</a>
+            <a href="/projets.html#" class="btn btn-light">Descriptif</a>
           </div>
         </section>
       </article>    
